--- a/style/style.css
+++ b/style/style.css
@@ -150,7 +150,7 @@ footer .logo {
     margin: 5px;
 }
 
-@media (width < 700px) {
+@media (max-width: 700px) {
     .grid {
         display: flex;
         flex-direction: column;
