--- a/style/style.css
+++ b/style/style.css
@@ -63,7 +63,7 @@ body {
     content: '';
     position: absolute;
 
-    background: linear-gradient(to bottom, rgba(197, 64, 0, 0.8) 1%, rgba(197, 64, 0, 0) 100%);
+    background: linear-gradient(to bottom, rgba(82, 81, 72, 0.8) 1%, rgba(197, 64, 0, 0) 100%);
     z-index: 1;
     top: 0;
     left: 0;
@@ -158,7 +158,7 @@ footer .logo {
 
     }
     .header {
-        background-color: rgb(255, 92, 16);
+        background-color: rgba(82, 81, 72, 0.8);
         justify-content: space-between;
         border-block-end: 2px solid black;
         padding: 0;
