--- a/style/style.css
+++ b/style/style.css
@@ -28,19 +28,22 @@ body {
 
 
 .logo {
-   
+    display: block;
    width: 500px;
    z-index: 2;
+   filter: drop-shadow(2px 1px 1px rgba(201, 151, 14, 0.514));
+   cursor:default;
 }
 
 .header-phone {
     z-index: 2;
     position: absolute;
     top: 20px;
-    right: 20px;
-    font-size: clamp(0.938rem, 0.617vw + 0.787rem, 1.25rem);
+    right: 50px;
+    font-size: 25px;
     font-weight: 700;
     font-family: inherit;
+    
 }
 
 .about {
@@ -62,8 +65,7 @@ body {
 .about::after {
     content: '';
     position: absolute;
-
-    background: linear-gradient(to bottom, rgba(82, 81, 72, 0.8) 1%, rgba(197, 64, 0, 0) 100%);
+    background: linear-gradient(to bottom, rgba(82, 81, 72, 0.8) 20%, rgba(197, 64, 0, 0) 100%);
     z-index: 1;
     top: 0;
     left: 0;
@@ -76,7 +78,7 @@ body {
     display: flex;
     flex-direction: row;
     padding: 20px;
-    color: rgb(255, 85, 0);
+    color: rgba(255, 85, 0, 0.877);
     font-size: 25px;
     font-weight: 700;
     text-align: center;
@@ -125,6 +127,7 @@ address {
 
 .link:not(.menu):hover {
     text-decoration: underline;
+    filter: drop-shadow(2px 1px 1px rgba(201, 151, 14, 0.514));
 }
 
 .map {
@@ -135,14 +138,16 @@ address {
 
 
 footer {
-    background-color: rgb(255, 92, 16);
-
+    background-color: rgba(82, 81, 72, 0.8);
+    display: flex;
+    flex-direction: column;
     text-align: center;
     padding: 10px;
 }
 
 footer .logo {
     width: 350px;
+    align-self: center;
 }
 
 .copyright {
@@ -160,17 +165,18 @@ footer .logo {
     .header {
         background-color: rgba(82, 81, 72, 0.8);
         justify-content: space-between;
-        border-block-end: 2px solid black;
-        padding: 0;
+        padding: 5px;
     }
 
     .logo {
-        justify-self: flex-start;
-        width:250px;
+        justify-items: flex-start;
+        width:200px;
+       filter: drop-shadow(2px 1px 1px rgba(201, 151, 14, 0.514));
 
     }
     .header-phone {
         position: static;
+
     }
 
     .main-photo {
