--- a/style/style.css
+++ b/style/style.css
@@ -6,7 +6,7 @@ body {
     justify-content: space-between;
     flex-direction: column;
     min-height: 100vh;
-    background-color: black;
+    background-color: rgba(82, 81, 72, 0.3);
 }
 
 .grid {
@@ -35,15 +35,19 @@ body {
    cursor:default;
 }
 
+
 .header-phone {
     z-index: 2;
     position: absolute;
     top: 20px;
     right: 50px;
-    font-size: 25px;
+    font-size: clamp(0.938rem, 0.641vw + 0.793rem, 1.563rem);
     font-weight: 700;
     font-family: inherit;
-    
+}
+
+.header-phone:hover {
+    filter: drop-shadow(2px 1px 1px rgba(201, 151, 14, 0.514));
 }
 
 .about {
@@ -78,7 +82,6 @@ body {
     display: flex;
     flex-direction: row;
     padding: 20px;
-    color: rgba(255, 85, 0, 0.877);
     font-size: 25px;
     font-weight: 700;
     text-align: center;
@@ -98,7 +101,7 @@ body {
 
 .menu-btn {
     background-color: transparent;
-    border: solid rgb(255, 85, 0);
+    border: solid black;
     color: inherit;
     font-family: inherit;
     font-weight: bold;
@@ -112,6 +115,7 @@ body {
 
 .menu-btn:hover {
     background-color: rgb(255, 85, 0);
+    border: solid rgba(255, 85, 0, 0.877);
     color: black;
 }
 
@@ -127,8 +131,11 @@ address {
 
 .link:not(.menu):hover {
     text-decoration: underline;
-    filter: drop-shadow(2px 1px 1px rgba(201, 151, 14, 0.514));
+    color: rgba(255, 85, 0, 0.877)
+    
 }
+
+
 
 .map {
     width: 60%;
@@ -170,10 +177,11 @@ footer .logo {
 
     .logo {
         justify-items: flex-start;
-        width:200px;
+        width:250px;
+        height: 100px;
        filter: drop-shadow(2px 1px 1px rgba(201, 151, 14, 0.514));
-
     }
+
     .header-phone {
         position: static;
 
@@ -192,7 +200,6 @@ footer .logo {
 
     .map {
         width: 100%;
-        border-block-end: 2px solid black;
     }
 
     .contacts {
